virt-install: Add --pm option

--- a/man/virt-xml.pod
+++ b/man/virt-xml.pod
@@ -188,6 +188,8 @@ Before defining or updating the domain, show the generated XML diff and interact
 
 =item --clock
 
+=item --pm
+
 =item --boot
 
 =item --filesystem
