--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -238,6 +238,13 @@ might be catchup, delay, etc. Refer to the libvirt docs for all values.
 Use --clock=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsTime>
 
 
+=item --pm=PMOPTS
+
+Configure guest power management features. Example suboptions include suspend_to_ram=on|off and suspend_to_disk=on|off
+
+Use --pm=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsPowerManagement>
+
+
 
 =back
 
