man: fix a typo in virt-manager man page
s/backround/background

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/man/virt-manager.pod
+++ b/man/virt-manager.pod
@@ -41,7 +41,7 @@ List debugging output to the console (normally this is only logged in
 
 =item --no-fork
 
-Don't fork C<virt-manager> off into the backround: run it blocking the
+Don't fork C<virt-manager> off into the background: run it blocking the
 current terminal. Useful for seeing possible errors dumped to stdout/stderr.
 
 =item --no-conn-autostart
