man: add virt-xml examples for changing startup policy and IO mode of disks
Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/man/virt-xml.pod
+++ b/man/virt-xml.pod
@@ -292,6 +292,10 @@ Change all disk devices of type 'disk' to use cache=none, using XML from stdin, 
 
   # cat <xmlfile> | virt-xml --edit device=disk --disk cache=none
 
+Change disk 'hda' IO to native and use startup policy as 'optional'.
+
+  # virt-xml fedora20 --edit target=hda --disk io=native,startup_policy=optional
+
 Change all host devices to use driver_name=vfio for VM 'fedora20' on the remote connection
 
   # virt-xml --connect qemu+ssh://remotehost/system \
