--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -954,16 +954,16 @@ PCI device (via lspci).
 
 Use --host-device=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsHostDev>
 
-=item --soundhw MODEL
+=item --sound MODEL
 
 Attach a virtual audio device to the guest. MODEL specifies the emulated
 sound card model. Possible values are ich6, ac97, es1370, sb16, pcspk,
 or default. 'default' will try to pick the best model that the specified
 OS supports.
 
-This deprecates the old boolean --sound option.
+This deprecates the old --soundhw option.
 
-Use --soundhw=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsSound>
+Use --sound=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsSound>
 
 =item --watchdog MODEL[,action=ACTION]
 
