--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -156,7 +156,7 @@ Use --numatune=? to see a list of all available sub options. Complete details at
 Tune blkio policy for the domain process. Example invocations
 
     --blkiotune weight=100
-    --blkiotune weight=100,device_path=/home/1.img,device_weight=200
+    --blkiotune weight=100,device_path=/dev/sdc,device_weight=200
 
 Use --blkiotune=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsBlockTuning>
 
