virt-image: Print warning that it is planned for removal

--- a/man/virt-image.pod
+++ b/man/virt-image.pod
@@ -10,6 +10,10 @@ B<virt-image> [OPTION]... IMAGE.XML
 
 =head1 DESCRIPTION
 
+
+WARNING: B<virt-image> is planned for removal in the near future. If you are depending on this tool, please contact the developers at virt-tools-list@redhat.com
+
+
 B<virt-image> is a command line tool for creating virtual machines from an
 XML image descriptor C<IMAGE.XML> (L<virt-image(5)>). Most attributes of
 the virtual machine are taken from the XML descriptor (e.g., where the
