virt-xml: add "-c" as short option of "--connect"
Add "-c" as short option of "--connect" for virt-xml.

We could use either
virt-xml -c lxc:///
or
virt-xml --connect lxc:///

This will be more convenient if we operate
non-default hypervisor.

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/man/virt-xml.pod
+++ b/man/virt-xml.pod
@@ -37,7 +37,7 @@ Show the help message and exit
 
 Show program's version number and exit
 
-=item  --connect=URI
+=item  -c URI, --connect=URI
 
 Connect to a non-default hypervisor. See L<virt-install(1)> for details
 
