virt-install: Drop support for --os-variant list
Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -399,11 +399,8 @@ By default, virt-install will attempt to auto detect this value from
 the install media (currently only supported for URL installs). Autodetection
 can be disabled with the special value 'none'.
 
-If the special value 'list' is passed, virt-install will print the full
-list of variant values and exit. The printed format is not a stable
-interface, DO NOT PARSE IT.
-
-Use '--os-variant list' to see the full OS list
+Use the command "osinfo-query os" to get the list of the accepted OS
+variants.
 
 =item --boot=BOOTOPTS
 
