cli: add missing remove_first method for --blkiotune
Add missing remove_first method for --blkiotune.
Update related man pages.

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -164,7 +164,7 @@ Use --memtune=? to see a list of all available sub options. Complete details at 
 
 Tune blkio policy for the domain process. Example invocations
 
-    --blkiotune weight=100
+    --blkiotune 100
     --blkiotune weight=100,device_path=/dev/sdc,device_weight=200
 
 Use --blkiotune=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsBlockTuning>
