man: fix a typo in virt-install.pod
s/libvirt/Libvirt

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -174,7 +174,7 @@ Use --blkiotune=? to see a list of all available sub options. Complete details a
 Configure the CPU model and CPU features exposed to the guest. The only
 required value is MODEL, which is a valid CPU model as known to libvirt.
 
-libvirt's feature policy values force, require, optional, disable, or forbid,
+Libvirt's feature policy values force, require, optional, disable, or forbid,
 or with the shorthand '+feature' and '-feature', which equal 'force=feature'
 and 'disable=feature' respectively
 
