cli: Rename --membacking to --memorybacking
More consistent with the existing --memory option, and the
XML block name.

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -100,11 +100,11 @@ like 'maxmemory' and 'hugepages'. This deprecates the -r/--ram option.
 
 Use --memory=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsMemoryAllocation>
 
-=item --membacking OPT1=yes|no[,OPT2=yes|no][...]
+=item --memorybacking OPT1=yes|no[,OPT2=yes|no][...]
 
 This option will influence how virtual memory pages are backed by host pages.
 
-Use --membacking=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsMemoryBacking>
+Use --memorybacking=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsMemoryBacking>
 
 =item  --arch=ARCH
 
