Prep for release 1.0.1

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,15 @@
  Virtual Machine Manager News
  ============================
 
+Release 1.0.1 (March 22, 2014)
+------------------------------
+- virt-install/virt-xml: New --memorybacking option (Chen Hanxiao)
+- virt-install/virt-xml: New --memtune option (Chen Hanxiao)
+- virt-manager: UI for LXC <idmap> (Chen Hanxiao)
+- virt-manager: gsettings key to disable keygrab (Kjö Hansi Glaz)
+- virt-manager: Show domain state reason in the UI (Giuseppe Scrivano)
+- Fix a number of bugs found since the 1.0.0 release
+
 Release 1.0.0 (February 14, 2014)
 ---------------------------------
 - virt-manager: Snapshot support
