virt-install: fix typo in the man page
Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -278,7 +278,7 @@ Use --pm=? to see a list of all available sub options. Complete details at L<htt
 
 =item  --cdrom=CDROM
 
-File or device use as a virtual CD-ROM device for fully virtualized guests.
+File or device used as a virtual CD-ROM device for fully virtualized guests.
 It can be path to an ISO image, or to a CDROM device. It can also be a URL
 from which to fetch/access a minimal boot ISO image. The URLs take the same
 format as described for the C<--location> argument. If a cdrom has been
