--- a/README
+++ b/README
@@ -23,6 +23,7 @@ Earliest tested versions of major components:
   gtk3 >= 3.6
   libvirt-python >= 0.4.0
   pygobject3 >= 3.4
+  libosinfo >= 0.2.10
 
 A more detailed dependency list can be found in virt-manager.spec.in.
 
