man: update virt-manager bugreporting URL
Now we use http://virt-manager.org/bugs/ as
bug reporting page.
Although old URL will be redirected to this one,
direct URL would be better.

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/man/virt-manager.pod
+++ b/man/virt-manager.pod
@@ -93,7 +93,7 @@ Standard GTK options like --g-fatal-warnings are also accepted.
 
 =head1 BUGS
 
-Please see L<http://virt-manager.org/page/BugReporting>
+Please see L<http://virt-manager.org/bugs/>
 
 =head1 COPYRIGHT
 
