doc, virt-install: add "lun" to the Disk device type list
Closes: https://bugzilla.redhat.com/show_bug.cgi?id=1077232

Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -524,7 +524,7 @@ Other available options:
 
 =item B<device>
 
-Disk device type. Value can be 'cdrom', 'disk', or 'floppy'. Default is
+Disk device type. Value can be 'cdrom', 'disk', 'lun' or 'floppy'. Default is
 'disk'. If a 'cdrom' is specified, and no install method is chosen, the
 cdrom is used as the install media.
 
