man: fix an incorrect description in virt-install man page
Actually --pm accepts suspend_to_mem rather than suspend_to_ram.

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -276,7 +276,7 @@ Use --clock=? to see a list of all available sub options. Complete details at L<
 
 =item --pm=PMOPTS
 
-Configure guest power management features. Example suboptions include suspend_to_ram=on|off and suspend_to_disk=on|off
+Configure guest power management features. Example suboptions include suspend_to_mem=on|off and suspend_to_disk=on|off
 
 Use --pm=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsPowerManagement>
 
