Clarify some translation strings, reported on transifex

--- a/man/virt-image.pod
+++ b/man/virt-image.pod
@@ -62,7 +62,7 @@ Name of the guest instance
 
 =item --memory=MEMORY
 
-Memory to allocate for the guest, in megabytes. Defaults to C</image/devices/memory> in the XML descriptor. This deprecates the -r/--ram option.
+Memory to allocate for the guest, in MiB. Defaults to C</image/devices/memory> in the XML descriptor. This deprecates the -r/--ram option.
 
 See L<virt-install(1)> for more details.
 
