--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -95,7 +95,7 @@ running C<virt-install>.
 
 =item --memory=MEM[,OPT1=VAL][...]
 
-Memory to allocate for the guest, in megabytes. Sub options are available,
+Memory to allocate for the guest, in MiB. Sub options are available,
 like 'maxmemory' and 'hugepages'. This deprecates the -r/--ram option.
 
 Use --memory=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsMemoryAllocation>
