man, virt-clone: document --quiet
Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/man/virt-clone.pod
+++ b/man/virt-clone.pod
@@ -147,6 +147,10 @@ Print the generated clone XML and exit without cloning.
 Shutdown and remove any existing guest with the passed C<--name> before
 cloning the original guest.
 
+=item -q, --quiet
+
+Avoid verbose output.
+
 =item -d, --debug
 
 Print debugging information to the terminal when running the install process.
