virt-install: Enable libosinfo detection for --cdrom
This streamlines virt-manager and virt-install implementations, requiring
installer.distro_detect to be called if we want distro detection. As
a side effect, we now get CDROM detection for free.

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -409,7 +409,8 @@ by specifying virtio among other guest tweaks.
 
 By default, virt-install will attempt to auto detect this value from
 the install media (currently only supported for URL installs). Autodetection
-can be disabled with the special value 'none'.
+can be disabled with the special value 'none'. Autodetection can be
+forced with the special value 'auto'.
 
 Use the command "osinfo-query os" to get the list of the accepted OS
 variants.
