virtinst: add ich9 to the list of audio models
Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -1002,7 +1002,7 @@ Use --host-device=? to see a list of all available sub options. Complete details
 =item --sound MODEL
 
 Attach a virtual audio device to the guest. MODEL specifies the emulated
-sound card model. Possible values are ich6, ac97, es1370, sb16, pcspk,
+sound card model. Possible values are ich6, ich9, ac97, es1370, sb16, pcspk,
 or default. 'default' will try to pick the best model that the specified
 OS supports.
 
