--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -583,7 +583,7 @@ Set drive as shareable (takes 'on' or 'off')
 
 =item B<size>
 
-size (in GB) to use if creating new storage
+size (in GiB) to use if creating new storage
 
 =item B<sparse>
 
@@ -1467,7 +1467,7 @@ C<~/.cache/virt-manager/virt-install.log> even if this parameter is omitted.
 =head1 EXAMPLES
 
 Install a Fedora 20 KVM guest with virtio accelerated disk/network,
-creating a new 10GB qcow2 file, installing from media in the hosts
+creating a new 10GiB qcow2 file, installing from media in the hosts
 CDROM drive. This will use Spice graphics by default, and launch autolaunch
 a graphical client.
 
@@ -1506,7 +1506,7 @@ Run a Live CD image under Xen fullyvirt, in diskless environment
        --cdrom /root/fedora7live.iso
 
 Run /usr/bin/httpd in a linux container guest (LXC). Resource usage is capped
-at 512 MB of ram and 2 host cpus:
+at 512 MiB of ram and 2 host cpus:
 
   # virt-install \
         --connect lxc:/// \
@@ -1529,7 +1529,7 @@ The host dir "/home/test" will be mounted at
         --filesystem /home/test,/mnt \
         --init /bin/sh
 
-Install a paravirtualized Xen guest, 500 MB of RAM, a 5 GB of disk, and
+Install a paravirtualized Xen guest, 500 MiB of RAM, a 5 GiB of disk, and
 Fedora Core 6 from a web server, in text-only mode, with old style --file
 options:
 
